# quadruped_ctrl

./: CMakeLists.txt  README.md  package.xml  requirements.txt  system frame.pptx
common/: CMakeLists.txt
common/include/Controllers/: DesiredStateCommand.h  LegController.h  StateEstimatorContainer.h
common/include/SimUtilities/: GamepadCommand.h  SimulatorMessage.h  gamepad_lcmt.hpp
common/src/Controllers/: DesiredStateCommand.cpp  LegController.cpp
config/: mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml  quadruped_ctrl_config.yaml  quadruped_robot_config.yaml
launch/: quadruped_ctrl.launch  quadruped_robot.launch  vision.launch
models/aws_robomaker_racetrack_Archway_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Archway_01/meshes/: aws_Archway_01_visual.obj.mtl
models/aws_robomaker_racetrack_Billboard_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Billboard_01/meshes/: aws_Billboard_01_visual.obj.mtl
models/aws_robomaker_racetrack_Column_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Column_01/meshes/: aws_Column_01_visual.obj.mtl
models/aws_robomaker_racetrack_CrashworthBucket_01/: model.config  model.sdf
models/aws_robomaker_racetrack_FenceMesh_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Fence_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Fence_02/: model.config  model.sdf
models/aws_robomaker_racetrack_Ground_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Light_01/: model.config  model.sdf
models/aws_robomaker_racetrack_RaceStartLight_01/: model.config  model.sdf
models/aws_robomaker_racetrack_StonePier_01/: model.config  model.sdf
models/aws_robomaker_racetrack_StopSign_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Track_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Track_02/: model.config  model.sdf
models/aws_robomaker_racetrack_Track_03/: model.config  model.sdf
models/aws_robomaker_racetrack_Track_04/: model.config  model.sdf
models/aws_robomaker_racetrack_Track_05/: model - Copy.sdf  model.config  model.sdf
models/aws_robomaker_racetrack_Trackline_01/: model.config  model.sdf
models/aws_robomaker_racetrack_TrafficCone_01/: model.config  model.sdf
models/aws_robomaker_racetrack_Wall_01/: model.config  model.sdf
msg/: commandDes.msg
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  RobotRunner.h  SimulationBridge.h
robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
rviz/: vision.rviz
scripts/: 4leggedRobot.urdf  plotData.py  testtf.py  walking_simulation.py  walking_simulation_origin.py  walking_simulation_torque.py
scripts/STL_simulation/: base_link.stl  coxa_bl.stl  coxa_br.stl  coxa_fl.stl  coxa_fr.stl  femur_bl.stl  femur_br.stl  femur_fl.stl  femur_fr.stl  phisics.txt  tibia_bl.stl  tibia_br.stl  tibia_fl.stl  tibia_fr.stl
src/: GaitCtrller.cpp  GaitCtrller.h  calculateTool.cpp  calculateTool.h  main.cpp  mainController.cpp
src/Controllers/: ControlFSMData.h  ControlParameters.h  DesiredStateCommand.cpp  DesiredStateCommand.h  FootSwingTrajectory.cpp  FootSwingTrajectory.h  GaitScheduler.cpp  GaitScheduler.h  LegController.cpp  LegController.h  MIT_UserParameters.h  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  PositionVelocityEstimator.h  RobotLegState.h  RobotParameters.h  SafetyChecker.cpp  SafetyChecker.h  StateEstimatorContainer.h
src/Dynamics/: FloatingBaseModel.cpp  FloatingBaseModel.h  Quadruped.cpp  Quadruped.h  SpatialInertia.h  spatial.h
src/JCQP/: SparseMatrixMath.h
src/MPC_Ctrl/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Gait.cpp  Gait.h  GraphSearch.h  OsqpTriples.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  SparseCMPC.cpp  SparseCMPC.h  SparseCMPC_Math.cpp  convexMPC_interface.cpp
src/Utilities/: IMUTypes.h  Interpolation.h  Utilities_print.cpp  orientation_tools.h
src/common/: CMakeLists.txt
src/common/include/: GamepadCommand.h
src/common/include/ControlParameters/: RobotParameters.h
src/common/include/Controllers/: ContactEstimator.h  DesiredStateCommand.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
src/common/include/Dynamics/: MiniCheetah1.h
src/common/include/SimUtilities/: IMUTypes.h
src/common/src/Controllers/: DesiredStateCommand.cpp  FootSwingTrajectory.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
src/qpOASES/include/: qpOASES.hpp
src/robot/: CMakeLists.txt
src/robot/include/: HardwareBridge.h  RobotBridge.h  RobotController.h  RobotRunner.h  SimulationBridge.h
src/robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
src/user/: CMakeLists.txt
src/user/MIT_Controller/: CMakeLists.txt  MIT_Controller.cpp  MIT_UserParameters.h  main.cpp
src/user/MIT_Controller/Controllers/BackFlip/: DataReader.cpp
src/user/MIT_Controller/Controllers/BalanceController/: BalanceController.cpp  BalanceController.hpp
src/user/MIT_Controller/Controllers/VisionMPC/: CMakeLists.txt  VisionMPCLocomotion.cpp
src/user/MIT_Controller/Controllers/WBC/: Task.hpp
src/user/MIT_Controller/Controllers/WBC/WBIC/: WBIC.cpp
src/user/MIT_Controller/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp
src/user/MIT_Controller/Controllers/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyPostureTask.cpp  BodyRyRzTask.cpp  JPosTask.cpp  LocalHeadPosTask.cpp  LocalPosTask.cpp  LocalTailPosTask.cpp
src/user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h
src/user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_Locomotion.cpp  FSM_State_RecoveryStand.cpp  FSM_State_StandUp.cpp  FSM_State_Vision.h
srv/: QuadrupedCmd.srv
urdf/mini_cheetah/: mini_cheetah.urdf.xacro
user/MIT_Controller/: CMakeLists.txt
worlds/: racetrack_day.world  racetrack_day_empty.world  racetrack_night.world
(+64 files in other folders)
