<?xml version="1.0"?>
<package format="3">
  <name>quadruped_ctrl</name>
  <version>0.0.0</version>
  <description>The quadruped_ctrl package</description>

  <maintainer email="wgx@todo.todo">wgx</maintainer>
  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pcl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pcl</exec_depend> -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
